Fix author names, update URLs, and add comments in references.bib

--- a/PEC_PCE_Dustin_Randel_de_Lara_Garcia/referencias.bib
+++ b/PEC_PCE_Dustin_Randel_de_Lara_Garcia/referencias.bib
@@ -30,7 +30,7 @@
   year      = {2024},
   langid    = {spanish},
   crossref  = {LopezGomezJimenezLibro}
-}
+} %bien
 
 @incollection{MongeEtAlCap8,
   author    = {Carlos Monge López and Laura García-Raga and Patricia Gómez Hernández},
@@ -42,7 +42,7 @@
   year      = {2024},
   langid    = {spanish},
   crossref  = {LopezGomezJimenezLibro}
-}
+} %bien
 
 @incollection{CamposGonzalezCap9,
   author    = {Blas Campos Barrionuevo and Raúl González-Fernández},
@@ -57,7 +57,7 @@
 }
 
 @article{AlvarezGonzalez2017,
-  author       = {Manuel Álvarez González},
+  author       = {Álvarez González, Manuel},
   title        = {Hacia un modelo integrador de la tutoría en los diferentes niveles educativos},
   journaltitle = {Educatio Siglo XXI},
   volume       = {35},
@@ -66,10 +66,10 @@
   year         = {2017},
   langid       = {spanish},
   url          = {https://revistas.um.es/educatio/article/view/298501/214161}
-}
+} %bien
 
 @article{AlvarezJustel2017,
-  author       = {José Álvarez Justel},
+  author       = {Josefina Álvarez Justel},
   title        = {La tutoría en secundaria},
   journaltitle = {Educatio Siglo XXI},
   volume       = {35},
@@ -78,10 +78,10 @@
   year         = {2017},
   langid       = {spanish},
   url          = {https://revistas.um.es/educatio/article/download/298521/214181/}
-}
+} %bien
 
 @article{Asensi2002,
-  author       = {José Asensi},
+  author       = {Asensi Díaz, Jesús},
   title        = {El desarrollo de la función tutorial en los centros educativos},
   journaltitle = {Tendencias Pedagógicas},
   volume       = {7},
@@ -89,10 +89,10 @@
   year         = {2002},
   langid       = {spanish},
   url          = {https://revistas.uam.es/tendenciaspedagogicas/article/view/1820}
-}
+} %bien
 
 @article{AvilaSanchezBueno2022,
-  author       = {Mar Ávila and María del Carmen Sánchez and Ana Bueno},
+  author       = {Mercedes Ávila Francés and María Carmen Sánchez Pérez and Andrea Bueno Baquero},
   title        = {Factores que facilitan y dificultan la transición de educación primaria a secundaria},
   journaltitle = {Revista de Investigación Educativa},
   volume       = {40},
@@ -100,22 +100,22 @@
   pages        = {147-164},
   year         = {2022},
   langid       = {spanish},
-  url          = {https://revistas.um.es/rie/article/view/441441}
-}
+  url          = {https://revistas.um.es/rie/article/view/441441/318821}
+} %bien
 
 @article{Bereziartua2017,
-  author       = {Javier Bereziartua and Nekane Intxausti and Ainhoa Odriozola},
+  author       = {Justo {Bereziartua} and Nahia Intxausti and Ainhoa Odriozola},
   title        = {Acción tutorial en la transición del alumnado de las escuelas del medio rural a la educación secundaria},
   journaltitle = {Tendencias Pedagógicas},
   volume       = {29},
-  pages        = {189-190},
+  pages        = {189-210},
   year         = {2017},
   langid       = {spanish},
   url          = {https://revistas.uam.es/tendenciaspedagogicas/article/view/7090/7468}
-}
+} %bien
 
 @article{DominguezAlvarezLopez2013,
-  author       = {Guadalupe Domínguez and Francisco Javier Álvarez and Ana María López},
+  author       = {Guillermo Domínguez and Francisco Javier Álvarez Bonilla and Ana María López Medialdea},
   title        = {Acción tutorial y orientación en el periodo de transición de la Educación Secundaria a la Universidad. La orientación al alumnado de nuevo ingreso},
   journaltitle = {Revista de Docencia Universitaria},
   volume       = {11},
@@ -124,7 +124,7 @@
   year         = {2013},
   langid       = {spanish},
   url          = {https://polipapers.upv.es/index.php/REDU/article/view/5574/5564}
-}
+} %bien
 
 @article{GarciaNieto1996,
   author       = {Narciso García Nieto},
@@ -136,10 +136,10 @@
   year         = {1996},
   langid       = {spanish},
   url          = {https://revistas.ucm.es/index.php/RCED/article/download/RCED9696120029A/17587}
-}
+} %bien
 
 @article{Gonzalez2022,
-  author       = {Ana González},
+  author       = {Ana González-Benito},
   title        = {La tutoría en el contexto escolar europeo},
   journaltitle = {Àmbits de Psicopedagogia i Orientació},
   number       = {56},
@@ -147,7 +147,7 @@
   year         = {2022},
   langid       = {spanish},
   url          = {http://ambitsaaf.cat/article/view/4165/4846}
-}
+} %bien
 
 @article{GonzalezAlvarez2018Formacion,
   author       = {María González Álvarez},
@@ -159,10 +159,10 @@
   year         = {2018},
   langid       = {spanish},
   url          = {https://revistaselectronicas.ujaen.es/index.php/ADE/article/view/3622/pdf}
-}
+} %bien
 
 @article{GonzalezAlvarez2018FP,
-  author       = {María González Álvarez},
+  author       = {María González},
   title        = {La función tutorial en Formación Profesional},
   journaltitle = {Espiral. Cuadernos del profesorado},
   volume       = {11},
@@ -171,10 +171,10 @@
   year         = {2018},
   langid       = {spanish},
   url          = {http://repositorio.ual.es/bitstream/handle/10835/6223/1942-6244-1-PB.pdf}
-}
+} %bien
 
 @article{LeonFernandez2019,
-  author       = {Verónica León and María Jesús Fernández},
+  author       = {Víctor León-Carrascosa and María José Fernández-Díaz},
   title        = {Eficacia percibida en el desarrollo de las tutorías en educación secundaria},
   journaltitle = {Bordón. Revista de Pedagogía},
   volume       = {71},
@@ -183,10 +183,10 @@
   year         = {2019},
   langid       = {spanish},
   url          = {https://recyt.fecyt.es/index.php/BORDON/article/view/69032}
-}
+} %bien
 
 @incollection{Maso2022,
-  author       = {Inés Masó},
+  author       = {Masó Aguado, María Isabel},
   title        = {Los conflictos en el aula de secundaria y las competencias comunicativas del profesorado},
   booktitle    = {Investigación e innovación educativa frente a los retos para el desarrollo sostenible},
   editor       = {José Antonio Marín and Juan Carlos de la Cruz and Sergio Pozo and Gloria Gómez},
@@ -195,7 +195,7 @@
   year         = {2022},
   langid       = {spanish},
   url          = {https://ddd.uab.cat/pub/artpub/2022/271664/invinnedu_a2022p1383.pdf}
-}
+} %bien
 
 @online{MEFPD2025Convivencia,
   author       = {Ministerio de Educación, Formación Profesional y Deportes},
@@ -207,7 +207,7 @@
 }
 
 @article{MunozPastor2015,
-  author       = {Ana Carmen Muñoz and Luis Pastor},
+  author       = {Ana Carmen Muñoz and Lorena Pastor Gil},
   title        = {La supresión de la hora de tutoría en Educación Secundaria. Un estudio exploratorio sobre las creencias de los docentes},
   journaltitle = {Revista Complutense de Educación},
   volume       = {26},
@@ -216,7 +216,7 @@
   year         = {2015},
   langid       = {spanish},
   url          = {https://revistas.ucm.es/index.php/RCED/article/view/42214/44224}
-}
+} %bien
 
 @incollection{Pantoja2005,
   author       = {Antonio Pantoja Vallejo},
@@ -228,18 +228,18 @@
   year         = {2005},
   langid       = {spanish},
   url          = {https://www4.ujaen.es/~apantoja/mis_libros/gestion_confli_05.pdf}
-}
+} %bien
 
 @article{RojoFerrando2022,
-  author       = {María Isabel Rojo Guillamón and María Ferrando Prieto},
+  author       = {María Isabel Rojo-Guillamón and Mercedes Ferrando Prieto},
   title        = {Convivencia, conflictos y mediación escolar en educación secundaria: Estudio de caso},
   journaltitle = {AZARBE. Revista Internacional de Trabajo Social y Bienestar},
   number       = {11},
   pages        = {57-66},
   year         = {2022},
   langid       = {spanish},
-  doi          = {10.6018/azarbe.505931}
-}
+  url          = {https://revistas.um.es/azarbe/article/view/505931/334081}
+} %bien
 
 @article{SanchezEtAl2020,
   author       = {María José Martínez Sánchez and Ana González-Benito and Consuelo Vélaz de Medrano Ureta},
@@ -253,7 +253,7 @@
 }
 
 @article{VelazGonzalezLopez2018,
-  author       = {Consuelo Vélaz de Medrano and Ana González and Ernesto López},
+  author       = {Consuelo Vélaz-de-Medrano Ureta and Ana González-Benito and Esther López-Martín},
   title        = {Evaluación del nivel de desempeño de la tutoría en educación secundaria obligatoria: Percepción de los propios tutores},
   journaltitle = {Revista de Educación},
   number       = {382},
@@ -264,70 +264,72 @@
 }
 
 @book{VidalEtAl2023,
-  author       = {José Vidal and others},
+  author       = {Javier Vidal and others},
   title        = {La tutoría en Secundaria bajo la perspectiva de una educación integral. Manual de formación},
   publisher    = {Fundación Europea Sociedad y Educación},
   year         = {2023},
   langid       = {spanish},
-  url          = {https://www.sociedadyeducacion.org/site/wp-content/uploads/MANUAL-DE-FORMACION-LEI1_TUTORIA_WEB.pdf}
-}
+  url          = {https://www.sociedadyeducacion.org/core/wp-content/uploads/MANUAL-DE-FORMACION-LEI-1_TUTORIA_WEB.pdf}
+} %bien
 
 @legislation{LOE2006,
-  author       = {Jefatura del Estado},
+  author       = {{Jefatura del Estado}},
   title        = {Ley Orgánica 2/2006, de 3 de mayo, de Educación},
   year         = {2006},
   journaltitle = {Boletín Oficial del Estado},
   number       = {106},
-  pages        = {17158-17207},
-  langid       = {spanish}
-}
+  langid       = {spanish},
+  url          = {https://www.boe.es/buscar/pdf/2006/BOE-A-2006-7899-consolidado.pdf}
+} %bien
 
 @legislation{LOMLOE2020,
-  author       = {Jefatura del Estado},
+  author       = {{Jefatura del Estado}},
   title        = {Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación},
   year         = {2020},
   journaltitle = {Boletín Oficial del Estado},
   number       = {340},
   pages        = {122868-122953},
-  langid       = {spanish}
-}
+  langid       = {spanish},
+  url          = {https://www.boe.es/boe/dias/2020/12/30/pdfs/BOE-A-2020-17264.pdf}
+} %bien
 
 @legislation{RD83_1996,
-  author       = {Ministerio de Educación y Ciencia},
+  author       = {{Ministerio de Educación y Ciencia}},
   title        = {Real Decreto 83/1996, de 26 de enero, por el que se aprueba el Reglamento Orgánico de los Institutos de Educación Secundaria},
   year         = {1996},
   journaltitle = {Boletín Oficial del Estado},
-  number       = {43},
-  pages        = {5380-5407},
+  number       = {45},
+  url          = {https://www.boe.es/buscar/pdf/1996/BOE-A-1996-3834-consolidado.pdf},
   langid       = {spanish}
-}
+} %bien
 
 @legislation{RD217_2022,
-  author       = {Ministerio de Educación y Formación Profesional},
+  author       = {{Ministerio de Educación y Formación Profesional}},
   title        = {Real Decreto 217/2022, de 29 de marzo, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Secundaria Obligatoria},
   year         = {2022},
   journaltitle = {Boletín Oficial del Estado},
   number       = {76},
-  pages        = {37881-37980},
-  langid       = {spanish}
-}
+  langid       = {spanish},
+  url          = {https://www.boe.es/buscar/pdf/2022/BOE-A-2022-4975-consolidado.pdf}
+} %bien
 
 @legislation{RD243_2022,
-  author       = {Ministerio de Educación y Formación Profesional},
+  author       = {{Ministerio de Educación y Formación Profesional}},
   title        = {Real Decreto 243/2022, de 5 de abril, por el que se establece la ordenación y las enseñanzas mínimas del Bachillerato},
   year         = {2022},
   journaltitle = {Boletín Oficial del Estado},
   number       = {82},
-  pages        = {43667-43745},
-  langid       = {spanish}
-}
+  langid       = {spanish},
+  url          = {https://www.boe.es/buscar/pdf/2022/BOE-A-2022-5521-consolidado.pdf}
+} %bien
 
 @legislation{RD659_2023,
   author       = {Ministerio de Educación, Formación Profesional y Deportes},
   title        = {Real Decreto 659/2023, de 18 de julio, por el que se desarrolla la ordenación del Sistema de Formación Profesional},
   year         = {2023},
   journaltitle = {Boletín Oficial del Estado},
-  number       = {172},
-  pages        = {102842-103080},
-  langid       = {spanish}
-}
+  number       = {174},
+  pages        = {106265-106464},
+  langid       = {spanish},
+  url          = {https://www.boe.es/boe/dias/2023/07/22/pdfs/BOE-A-2023-16889.pdf}
+} %bien
